data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4394.wast
;; Test 3: Missing Function in Table - **Constraint/Issue**: Evaluates behavior when a function is absent in the referenced table slot. - **Test Description**: Set up a table with an empty slot at the accessed index. Invoke `call_indirect` to call this nonexistent function, leading to a trap.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) )
    (func $missing-func
      (call_indirect (type 0) (i32.const 0) (i32.const 1))
    )
  )
  "element is empty"
)